@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2015,v 1.3199 2015/08/01 19:10:53 tonio Exp $
+$NetBSD: CHANGES-2015,v 1.3200 2015/08/02 02:09:31 markd Exp $
 
 Changes to the packages collection and infrastructure in 2015:
 
@@ -5900,3 +5900,13 @@ Changes to the packages collection and infrastructure in 2015:
 	Updated comms/gammu to 1.33.0nb1 [wiz 2015-08-01]
 	Updated fonts/awesome-ttf to 4.4.0 [richard 2015-08-01]
 	Updated chat/weechat to 1.2 [tonio 2015-08-01]
+	Added print/tex-easy-todo version 20140101 [markd 2015-08-02]
+	Added print/tex-easy-todo-doc version 20140101 [markd 2015-08-02]
+	Added print/tex-fixmetodonotes version 0.2.2 [markd 2015-08-02]
+	Added print/tex-fixmetodonotes-doc version 0.2.2 [markd 2015-08-02]
+	Added print/tex-todonotes version 1.0.4 [markd 2015-08-02]
+	Added print/tex-todonotes-doc version 1.0.4 [markd 2015-08-02]
+	Added print/tex-todo version 2.142 [markd 2015-08-02]
+	Added print/tex-todo-doc version 2.142 [markd 2015-08-02]
+	Added print/tex-polyglossia version 1.40.1 [markd 2015-08-02]
+	Added print/tex-polyglossia-doc version 1.40.1 [markd 2015-08-02]
